c3prj1_deck/grade.txt
Grading at Fri Aug  2 23:25:34 UTC 2019
Compiling deck.c
deck.c: In function ‘add_card_to’:
deck.c:58:32: error: request for member ‘value’ in something not a structure or union
  deck->cards[deck->n_cards - 1].value = c.value;
                                ^
deck.c:59:32: error: request for member ‘suit’ in something not a structure or union
  deck->cards[deck->n_cards - 1].suit = c.suit;
                                ^
Could not compile your deck.c!

Overall Grade: FAILED
